--- a/monorepo/javascript/index.html
+++ b/monorepo/javascript/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-    <form action="">
-        <div id="checkbox-inputs">
-            <label for="internship">
-                <input type="checkbox" name="internship" id="internship"> 
-                <span>Internship</span>
-            </label>
-            <label for="pabau">
-                <input type="checkbox" name="pabau" id="pabau"> 
-                <span>Pabau</span>
-            </label>
-            <label for="employment">
-                <input type="checkbox" name="employment" id="employment"> 
-                <span>Employment</span>
-            </label>
-            <label for="career" id="career-label"> 
-                <input type="checkbox" name="career" id="career"> 
-                <span>Career</span> 
-            </label>
-        </div>
-        <button id="shuffle-button" type="button">Shuffle Values</button>
-        <button id="change-button" type="button">Change Values</button>
-        <button id="selected-button" type="button">Show selected values</button>
-    </form>
-    <div class="display-hidden" id="selected-div">
 
-    </div>
+<body>
+    <form class="container p-3">
+        <div id="controls-container" class="btn-group btn-group-sm" role="group">
+            <div class="mx-1">
+                <input type="checkbox" class="btn-check" id="internship" autocomplete="off">
+                <label class="btn btn-outline-primary" for="internship">Internship</label>
+            </div>
+
+            <div class="mx-1">
+                <input type="checkbox" class="btn-check" id="pabau" autocomplete="off">
+                <label class="btn btn-outline-primary" for="pabau">Pabau</label>
+            </div>
+
+            <div class="mx-1">
+                <input type="checkbox" class="btn-check" id="employment" autocomplete="off">
+                <label class="btn btn-outline-primary" for="employment">Employment</label>
+            </div>
+            <div class="mx-1">
+                <input type="checkbox" class="btn-check" id="career" autocomplete="off">
+                <label class="btn btn-outline-primary" for="career">Career</label>
+            </div>
+        </div>
+        <div id="buttons-container" class="mt-3">
+            <button id="shuffle-button" type="button" class="btn btn-sm btn-primary">Shuffle Values</button>
+            <button id="change-button" type="button" class="btn btn-sm btn-primary">Change Values</button>
+            <button id="selected-button" type="button" class="btn btn-sm btn-primary">Show selected values</button>
+        </div>
+        <div id="values-container" class="mt-3"></div>
+    </form>
 
 </body>
 <script src="index.js"></script>
